src/test/ui/borrowck/mut-borrow-outside-loop.nll.stderr
error: compilation successful
  --> $DIR/mut-borrow-outside-loop.rs:13:1
   |
LL | / fn main() { #![rustc_error] // rust-lang/rust#49855
LL | |     let mut void = ();
LL | |
LL | |     let first = &mut void;
...  |
LL | |     }
LL | | }
   | |_^

error: aborting due to previous error

